--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600;400;&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");
 
 * {
   margin: 0%;
